tests/snapshots/parser_snapshots__parser_all@ast-155.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_binary_op_arithmetic_ok.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        BinaryOp(
                                            Literal(
                                                Int(
                                                    "5",
                                                ),
                                            ),
                                            Add,
                                            Literal(
                                                Int(
                                                    "5",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
