tests/snapshots/parser_snapshots__parser_all@ast-159.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_if_expression_typechecks.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [],
                                returns: Some(
                                    If(
                                        Literal(
                                            Bool(
                                                true,
                                            ),
                                        ),
                                        Block {
                                            statements: [],
                                            returns: Some(
                                                Literal(
                                                    Int(
                                                        "5",
                                                    ),
                                                ),
                                            ),
                                        },
                                        Some(
                                            Block {
                                                statements: [],
                                                returns: Some(
                                                    Literal(
                                                        Int(
                                                            "6",
                                                        ),
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
