tests/snapshots/parser_snapshots__parser_all@ast-16.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/16_union_json_value.of
---
Err(
    "unexpected token comment",
)
